# Whisper-Studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Installer/: setup_selector.iss
resources/: app.rc
src/: AudioRecorder.cpp  AudioRecorder.h  Gui.cpp  Gui.h  InputManager.cpp  InputManager.h  Logger.h  ModelManager.cpp  ModelManager.h  SpeakerDiarizer.cpp  SpeakerDiarizer.h  WhisperEngine.cpp  WhisperEngine.h  main.cpp
